Fixed the footer styling for dark mode

--- a/Public/about.css
+++ b/Public/about.css
@@ -28,6 +28,10 @@ body.dark-mode {
     border-radius: 50px;
   }
 
+  body.dark-mode .footer-container li>a {
+    color: #000000;
+  }
+
 /* NavBar */
 header{
     background-image: linear-gradient(to left, #c4ffca, #59ed54);
